<resources>
    <string name="app_name">Directorio</string>

    <string name="titulo">Directorio empresas de software</string>
    <string name="mensaje_seleccion">Seleccione una opción</string>
    <string name="agregar_empresa">Agregar empresa</string>
    <string name="actualizar_empresa">Editar empresa</string>
    <string name="eliminar_empresa">Eliminar empresa</string>
    <string name="ver_empresas">Ver empresas</string>

    <string name="datos_id">Ingrese el Id de la empresa</string>

    <string name="datos_nombre">Nombre</string>
    <string name="datos_url">Url de página web</string>
    <string name="datos_telefono">Teléfono</string>
    <string name="datos_correo">Correo electrónico</string>
    <string name="datos_clasificacion">Clasificación</string>

    <string name="datos_clasificacion_seleccion">Clasificación</string>
    <string name="datos_clasificacion_consultoria">CONSULTORIA</string>
    <string name="datos_clasificacion_desarrollo_medida">DESARROLLO A MEDIDA</string>
    <string name="datos_clasificacion_fabrica">FÁBRICA DE SOFTWARE</string>

    <string name="datos_productos">Productos</string>
    <string name="datos_servicios">Servicios</string>

    <string name="agregar_editar_empresa">Guardar</string>

    <!--<string name="datos_nombre">Nombre</string>
    <string name="datos_nombre">Nombre</string>-->

</resources>


