<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchFilterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Id" />

    <TextView
        android:id="@+id/filLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_nombre" />

    <TextView
        android:id="@+id/filLayoutUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_url" />

    <TextView
        android:id="@+id/filLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_telefono" />

    <TextView
        android:id="@+id/filLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_correo" />

    <TextView
        android:id="@+id/filLayoutProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_productos" />

    <TextView
        android:id="@+id/filLayoutServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_servicios" />

    <TextView
        android:id="@+id/filLayoutClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_servicios" />

</LinearLayout>
